2012-09-27  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge, mmg: enhancement: Added options for turning off
	writing "CueDuration" elements ("--engage no_cue_duration") and
	"CueRelativePosition" elements ("--engage
	no_cue_relative_positions").

	* mkvmerge: new feature: The element "CueRelativePosition" is
	written for all cue entries.

	* mkvmerge: new feature: The element "CueDuration" will be written
	for all cue entries referring to subtitle tracks.

	* mkvmerge: new feature: mkvmerge will write cues for subtitle
	tracks by default now.

	* mkvinfo: new feature: added support for the new elements
	CueDuration, CueRelativePosition and TimecodeScaleDenimonator. The
	denominator's value is only shown so far but not taken into
	account when calculating any timecode.

	* mkvpropedit, mmg, mkvmerge: removal: removed support for the
	deprecated element TrackTimecodeScale.

2012-09-02  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.8.0.

	* Build system: dropped support for gcc 4.6.0.

	* mkvpropedit: new feature: Added support for adding, deleting and
	replacing attachments.

2012-09-01  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: new feature: chapter editor: Added support for the edition
	flags "hidden", "default" and "ordered" as well as the chapter
	values "segment UID" and "segment edition UID". Implements ticket
	#736.

2012-08-30  Moritz Bunkus  <moritz@bunkus.org>

	* documentation: Added a Basque translation of mmg's guide by
	Xabier Aramendi (see AUTHORS).

	* all: bug fix: Fixed a buffer overflow in the Base64 decoder
	routine.

2012-08-19  Moritz Bunkus  <moritz@bunkus.org>

	* source: Various fixes for building with g++ 4.7.x and clang 3.1.

2012-08-08  Moritz Bunkus  <moritz@bunkus.org>

	* Build system: Boost's "bind" library is not required
	anymore. The C++11 features from "functional" are used instead.

2012-08-07  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: MPEG transport streams whose timecodes wrap