@@ -1,3 +1,9 @@
+2012-10-08  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: enhancement: Dirac video code: Added four more
+	pre-defined video types from Dirac spec v2.2.2 and two from Dirac
+	Pro.
+
 2012-09-27  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mkvmerge, mmg: enhancement: Added options for turning off
